Linux UI: Fix profile chooser button background color

Previously, the profile chooser hovered background color was hardcoded to
0xEAEAEA.  This is about the same color as dark themes will use for their label
text, making the hovered text unreadable.  This CL changes the color to use the
menu item hovered color instead.  Images of the change at:
https://bugs.chromium.org/p/chromium/issues/detail?id=677286#c7

BUG=677286
R=sky@chromium.org

Review-Url: https://codereview.chromium.org/2624683002
Cr-Commit-Position: refs/heads/master@{#448542}

Former-commit-id: f0de79a0e44c878b66df8012e77ff38896fe8faf